# dev-helpers

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  rsync_backup.py  settings.py
.specify/memory/: constitution.md  constitution_update_checklist.md
bash_history_cleaner/: README.md  bash_history_cleaner.py  settings.json
clean_bash_history/: clean_bash_history.py
desktop_cleaner/: cleandesk.py  extensions_directory_map.py  utility_func.py
download_directory_manager/: config_file.py  extensions_directory_map.py  manager.py
go/goback/: .gitignore  CLAUDE.md  Makefile  README.md  go.mod  go.sum  main.go
go/gotime/: .gitignore  CLAUDE.md  Makefile  README.md  go.mod  go.sum  main.go
go/hr/: go.mod  go.sum  justfile  main.go
go/jsonc2json/: go.mod  justfile  main.go
go/qf/: .gitignore  .golangci.yml  Makefile  OPTIMIZATION_SUMMARY.md  coverage.html  final_test_summary.md  go.mod  go.sum  simple_core_validation.go  test_manual_validation.md  validate_core_functionality.go
go/shellshelf/: .gitignore  .prettierignore  Makefile  README.md  go.mod  go.sum  justfile  main.go  package-lock.json  package.json  tailwind.config.js
grades_calculator/: .gitignore  README.md  grades.py  grades_example.json  pytest.ini  requirements-dev.txt
grades_calculator/customerrors/: errors.py
grades_calculator/grades_calculator/: grades.py
grades_calculator/src/: grades.py
grades_calculator/tests/: conftest.py  test_grades.py
haveibeenpwnwed_password_checker/: README.md  pwned.py
learning-logs-to-markdown/: Pipfile  README.md  get_learning_logs.py  requirements.txt
learning-logs-to-markdown/tests/: test_get_learning_logs.py
password_validator/: .gitignore  README.md
password_validator/pcs/: input_validator.py
password_validator/tests/: test_password_validator.py
python/bash_history_cleaner/: README.md  settings.json
python/dedupe_files/: dedupe_files.py
python/filter_vscode_issues/: README.md  pyproject.toml
python/filter_vscode_issues/src/filter_vscode_issues/: cli.py
python/filter_vscode_issues/tests/: test_cli.py
python/gitbrief/: pyproject.toml
python/gitbrief/src/gitbrief/: ai.py  cli.py  clipboard.py  config.py  exceptions.py  formatters.py  git.py  history.py  prompt.py  templates.py
python/gitbrief/src/gitbrief/templates/: default.txt  executive.txt  standup.txt
python/gitbrief/tests/: conftest.py  test_ai.py  test_cli_integration.py  test_clipboard.py  test_config.py  test_discovery.py  test_exceptions.py  test_formatters.py  test_git.py  test_graceful_degradation.py  test_groups.py  test_history.py  test_prompt.py  test_templates.py
python/gitbrief/tests/fixtures/: sample_config.json  sample_git_log.txt
python/har_media_downloader/: har_media_downloader.py
python/haveibeenpwnwed_password_checker/: pwned.py
python/jsonl_to_csv_converter/: README.md  jsonl_to_csv_converter.py
python/learning-logs-to-markdown/: README.md  get_learning_logs.py
python/osxphotos/: .env.example  README.md  pyproject.toml
python/osxphotos/src/osxphotos/cli/: cli.py  sd_card.py
python/password_validator/: requirements.txt
python/photos_backup/: .env.example  .gitignore  .osxphotos.exclude.example  README.adoc  README.md  photos_export_2024-06-23.csv  pyproject.toml  ruff.toml
python/photos_backup/src/photos_backup/: config.py  summary.py
python/photos_backup/src/photos_backup/apple_photos/: export.py  late_additions.py
python/photos_backup/src/photos_backup/cli/: apple_photos.py  backup_all.py  cli.py  one_drive.py  remote.py  sd_card.py  sdd.py  ssd.py
python/photos_backup/src/photos_backup/one_drive/: auth.py  backup.py
python/photos_backup/src/photos_backup/remote/: backup.py
python/photos_backup/src/photos_backup/sd_card/: backup.py
python/photos_backup/src/photos_backup/sdd/: backup.py
python/photos_backup/src/photos_backup/ssd/: backup.py
python/photos_backup/tests/: test_late_photo_additions.py
python/rsync_backup/: README.md
python/zsh_history_cleaner/: README.md
rsync_backup/: .gitignore  README.md  rsync_backup.py  settings.json  settings.py  tags
specs/001-qf-core-concept/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
typescript/ai-sloppy-paste/: .eslintrc.json  .gitignore  .prettierrc.json  CHANGELOG.md  README.md  SETUP.md  package-lock.json  package.json  raycast-env.d.ts  tsconfig.json  vitest.config.ts
typescript/gotime-raycast/: .gitignore  README.md  SETUP.md  package-lock.json  package.json  raycast-env.d.ts  tsconfig.json
zsh_history_cleaner/: README.md  settings.json  tags  zsh_history_cleaner.py
(+365 files in other folders)
