[project]
name = "photos_backup"
version = "0.1.0"
description = "Simple backup solution for Apple Photos on macOS"
authors = [{ name = "Sébastien Lavoie", email = "sgdlavoie@gmail.com" }]
dependencies = [
    "python-dotenv>=1.0.1",
    "click>=8.1.8",
    "osxphotos>=0.69.2",
    "office365-rest-python-client>=2.5.14",
    "msgraph-sdk>=1.21.0",
]
readme = "README.md"  # `rye` doesn't know what do to with a `README.adoc`
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.6.1",
    "pre-commit>=3.8.0",
]

# `uv` breaks the build. No thanks.
[tool.rye.behavior]
use-uv = false

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/photos_backup"]

[tool.rye.scripts]
cli = 'python -m photos_backup.cli.cli'
