[project]
name = "photos_backup"
version = "0.1.0"
description = "Simple backup solution for Apple Photos on macOS"
authors = [{ name = "Sébastien Lavoie", email = "sgdlavoie@gmail.com" }]
dependencies = [
    "click>=8.3.1",
    "osxphotos>=0.75.6",
    "python-dotenv>=1.2.2",
]
readme = "README.md"  # `rye` doesn't know what do to with a `README.adoc`
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.15.5",
]

# `uv` breaks the build. No thanks.
[tool.rye.behavior]
use-uv = false

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/photos_backup"]

[tool.rye.scripts]
cli = 'python -m photos_backup.cli.cli'
