[project]
name = "photos_backup"
version = "0.1.0"
description = "Simple backup solution for Apple Photos on macOS"
authors = [{ name = "Sébastien Lavoie", email = "sgdlavoie@gmail.com" }]
dependencies = [
    "click>=8.3.2",
    "osxphotos>=0.75.7",
    "python-dotenv>=1.2.2",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["ruff>=0.15.5"]

[project.scripts]
cli = "photos_backup.cli.cli:cli"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/photos_backup"]
